2009-02-26  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added support for queries elapsed time in
	print_database_debug().

	* operation/events/events.php: Style correction.

	* reporting/fgraph.php: Allow boolean graphics to get a starting date.

	* general/footer.php: Use config['debug'] instead of developer_bypass.

2009-02-25  Esteban Sanchez  <estebans@artica.es>

	* include/functions_ui.php: Fixed typo that makes incorrect argument
	list in debug().

2009-02-25  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_reporting.php: Thanks to Esteban's functions found out
	some bad performers. Fixed it
	
	* include/auth/ldap.php: Calling get_system_time() 800 times is too much.
	Moved it to a variable.

2009-02-25  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Do not show errors on sql_error_handler()
	if debug flag is active. Removed return flag to print_database_debug()
	because it was causing memory allocation errors. For the same reason,
	the table is printed each 100 elements.
	
	* index.php: Run print_database_debug() after the flush.

	* include/functions.php: Removed deprecated pandora_debug()

2009-02-25  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added database debug support. If the debug
	flag in config is set, a table with all the queries done in a page is
	shown. To do so, add_database_debug_trace() and print_database_debug()
	were added.

	* include/functions_ui.php: Added debug() function which shows a
	given variable content and a traceback which can be toggled to make
	developers life easier.

	* index.php: Print database debug table.

	* include/styles/pandora.css: Styles for debug functionallity.

2009-02-24  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_db.php: Fixed where clause
	
	* images/groups_small/printer.png: Added printer icon to groups since
	it might be useful to create a separate printer group
